<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@drawable/dialog_bg"
        app:layout_constraintBottom_toTopOf="@id/glHorizontal8"
        app:layout_constraintEnd_toEndOf="@id/glVertical8"
        app:layout_constraintStart_toStartOf="@id/glVertical2"
        app:layout_constraintTop_toBottomOf="@id/glHorizontal2">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/reorder_list"
            android:textAppearance="@style/TextAppearance.AppTheme.Headline2"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgSort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbSortByTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:layoutDirection="rtl"
                android:text="@string/reorder_by_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:checked="true" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbSortByDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:layoutDirection="rtl"
                android:text="@string/reorder_by_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApply"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/dialog_button_bg"
            android:text="@string/apply"
            android:textColor="@color/textColor"
            app:cornerRadius="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgSort" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReset"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dialog_button_bg"
            android:backgroundTint="@color/on_background"
            android:text="@string/reset"
            android:textColor="@color/textColor"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnApply" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

