<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".45" />

        <ImageView
            android:id="@+id/ivApod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/guideline45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".33" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppTheme.Headline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginEnd="@dimen/details_view_margin"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="@id/guideline45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="The Milky Way " />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_gradient"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/ivApod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextAppearance.AppTheme.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="01/01/2022" />

        <ImageView
            android:id="@+id/ivFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_view_margin"
            android:layout_marginEnd="@dimen/details_view_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvExplanation"
            style="@style/TextAppearance.AppTheme.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            tools:text="@string/lorem_ipsum" />

        <TextView
            android:id="@+id/tvWarped"
            style="@style/TextAppearance.AppTheme.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            android:drawablePadding="8dp"
            android:text="@string/warped"
            app:drawableStartCompat="@drawable/ic_warped"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExplanation" />

        <TextView
            android:id="@+id/tvStars"
            style="@style/TextAppearance.AppTheme.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            android:drawablePadding="8dp"
            android:text="@string/stars"
            app:drawableStartCompat="@drawable/ic_stars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarped" />

        <TextView
            android:id="@+id/tvDust"
            style="@style/TextAppearance.AppTheme.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            android:drawablePadding="8dp"
            android:text="@string/gassy"
            app:drawableStartCompat="@drawable/ic_dust"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStars" />

        <TextView
            android:id="@+id/tvBlackHole"
            style="@style/TextAppearance.AppTheme.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_view_margin"
            android:layout_marginTop="@dimen/details_view_margin"
            android:drawablePadding="8dp"
            android:text="@string/black_hole"
            app:drawableStartCompat="@drawable/ic_blackhole"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDust" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>